# agentec-catalog

./: .gitignore  README.md
mcp-server/: Dockerfile  package-lock.json  package.json  tsconfig.json
mcp-server-py/: Dockerfile  README.md  pyproject.toml
mcp-server-py/src/: __init__.py  app.py  catalog_loader.py  config.py  logging_config.py  mcp_protocol.py  schemas.py  tool_executor.py  tool_registry.py
mcp-server/src/: index.ts  registry.ts
mcp-server/src/tools/: cleanup.ts  curp-downloader.ts  doc-reader.ts  graph-approvals.ts  graph-calendar.ts  graph-files-write.ts  graph-files.ts  graph-flows.ts  graph-mail.ts  graph-powerbi.ts  graph-sharepoint-search.ts  graph-teams.ts  graph-users.ts  run-external-tool.ts  web-fetch-download.ts  web-login-playwright-py.ts  web-login-playwright.ts
profiles/: agentec-local-reusable.yaml  monitorizacion-web.yaml
releases/: 2026-04-demo.yaml
scripts/: install-release.sh  update-release.sh
skills/: approved-skills.yaml
tools/: approved-tools.yaml
